Preserve case-sensitive HTTP request methods
(cherry picked from commit 3774b8a2ea73751df4b6bcd4b6c92c18b37f4c03)